codes/4_init_conintainers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-init-container
  labels:
    env: qa
    tier: frontend
  annotations:
    created-by: "cluster admin"
spec:
  containers:
  - name: myapp
    image: ikubernetes/myapp:v2
