codes/4_liveness-http-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-http-demo
  labels:
    test: liveness-http-demo
spec:
  containers:
  - name: liveness-http-demo
    image: nginx:1.12-alpine
    ports:
    - name: http
      containerPort: 80
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", " echo Healthy > /usr/share/nginx/html/healthz"]
    livenessProbe:
      httpGet:
        path: /healthz
        port: http
        scheme: HTTP
