codes/4_liveness-tcp-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-tcp-demo
  labels:
    test: liveness-tcp-demo
spec:
  containers:
  - name: liveness-tcp-demo
    image: nginx:1.12-alpine 
    livenessProbe:
      tcpSocket:
        port: 80
