codes/4_readiness-tcp-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-tcp-demo
  labels:
    test: readiness-tcp-demo
spec:
  containers:
  - name: readiness-tcp-demo
    image: nginx:1.12-alpine 
    readinessProbe:
      tcpSocket:
        port: 80
