codes/4_stress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-demo
spec:
  containers:
  - name: stress-demo
    image: ikubernetes/stress-ng
    command: ["/usr/bin/stress-ng", "-m 1", "-c 1"]
    resources:
      requests:
        memory: "128Mi"
        cpu: "200m"
