codes/8_envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envfrom-test-pod
  labels:
    app: label-envfrom-test-pod
spec:
  containers:
  - name: envfrom-test-container
    image: busybox
    command: ["/bin/sh", "-c", "env"]
