codes/8_secretVol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-vol
  labels:
    app: secret-vol
spec:
  imagePullSecrets:
  - name: local-registry
  containers:
  - name: secret-vol
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: secret-vol
      mountPath: /etc/test
      readOnly: true
  volumes:
  - name: secret-vol
    secret:
      secretName: yaml-secret
      items:
      - key: username
        path: username
      - key: password
        path: password
