codes/6_lb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: myapp  
  loadBalancerIP: 127.0.0.1
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    # nodePort: 30002
