codes/6_service_demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  # sessionAffinity: ClientIP
  type: NodePort
  selector:
    app: myapp  
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    # nodePort: 30001
