codes/6_tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  labels:
    app: tomcat-svc
spec:
  selector:
    app: tomcat  
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
