codes/6_tomcat-ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: tomcat-svc
    servicePort: 80
